--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Title -->
-        <title>Bootstrap demo</title>
+        <title>BUKU TAHUNAN AKSANA 29 MAN KAPUAS TAHUN 2024</title>
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -67,7 +67,7 @@
                 <div class="fw-bold text-white position-absolute z-1 hero-title mt-4 mt-sm-0" id="title-1">
                     AKSANA 29
                 </div>
-                <img src="/img/hero.jpg" alt="foto angkatan" class="img-fluid w-100 mt-5">
+                <img src="img/hero.jpg" alt="foto angkatan" class="img-fluid w-100 mt-5">
                 <div class="fw-bold text-white position-absolute bottom-0 z-1 mb-1 hero-title" id="title-2">
                     MAN KAPUAS ANGKATAN KE-29
                 </div>
