--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
         <!-- My CSS -->
-        <link rel="stylesheet" href="/style/style.css">
+        <link rel="stylesheet" href="style/style.css">
     </head>
 
     <body>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-sm-6 col-lg-4 mb-3">
+                    <div class="col-12 col-lg-6 mb-3">
                         <div class="card">
                             <img src="img/card-1.jpg" class="card-img-top" alt="foto angkatan 29">
                             <div class="card-body">
@@ -96,7 +96,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-4 mb-3">
+                    <div class="col-12 col-lg-6 mb-3">
                         <div class="card">
                             <img src="img/card-1.jpg" class="card-img-top" alt="foto angkatan 29">
                             <div class="card-body">
@@ -139,7 +139,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-4 mb-3">
+                    <div class="col-12 col-lg-6 mb-3">
                         <div class="card">
                             <img src="img/card-1.jpg" class="card-img-top" alt="foto angkatan 29">
                             <div class="card-body">
