--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="fw-bold text-white position-absolute z-1 hero-title mt-4 mt-sm-0" id="title-1">
                     AKSANA 29
                 </div>
-                <img src="img/hero.jpg" alt="foto angkatan" class="img-fluid w-100 mt-5">
+                <img src="img/homepage/hero.jpg" alt="foto angkatan" class="img-fluid w-100 mt-5">
                 <div class="fw-bold text-white position-absolute bottom-0 z-1 mb-1 hero-title" id="title-2">
                     MAN KAPUAS ANGKATAN KE-29
                 </div>
@@ -86,7 +86,7 @@
                 <div class="row">
                     <div class="col-12 col-lg-6 mb-3">
                         <div class="card">
-                            <img src="img/card-1.jpg" class="card-img-top" alt="foto angkatan 29">
+                            <img src="img/homepage/about/card-1.jpg" class="card-img-top" alt="foto angkatan 29">
                             <div class="card-body">
                                 <h5 class="card-title text-center">AKSANA 29</h5>
                                 <p class="card-text text-justify">Lorem ipsum dolor, sit amet consectetur adipisicing
@@ -98,7 +98,7 @@
                     </div>
                     <div class="col-12 col-lg-6 mb-3">
                         <div class="card">
-                            <img src="img/card-1.jpg" class="card-img-top" alt="foto angkatan 29">
+                            <img src="img/homepage/about/card-1.jpg" class="card-img-top" alt="foto angkatan 29">
                             <div class="card-body">
                                 <h5 class="card-title text-center">AKSANA 29</h5>
                                 <p class="card-text text-justify">Lorem ipsum dolor, sit amet consectetur adipisicing
@@ -141,7 +141,7 @@
                     </div>
                     <div class="col-12 col-lg-6 mb-3">
                         <div class="card">
-                            <img src="img/card-1.jpg" class="card-img-top" alt="foto angkatan 29">
+                            <img src="img/homepage/about/card-1.jpg" class="card-img-top" alt="foto angkatan 29">
                             <div class="card-body">
                                 <h5 class="card-title text-center">AKSANA 29</h5>
                                 <p class="card-text text-justify">Lorem ipsum dolor, sit amet consectetur adipisicing
@@ -155,6 +155,54 @@
             </div>
         </section>
         <!-- About Section End-->
+
+        <!-- Section Gallery Start-->
+        <section class="gallery">
+            <div class="container-fluid">
+                <div id="gallery" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#gallery" data-bs-slide-to="0" class="active"
+                            aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#gallery" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#gallery" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner position-relative">
+                        <div class="carousel-item active">
+                            <img src="img/homepage/carousel/carousel-1.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-block z-1">
+                                <h5>First slide label</h5>
+                                <p>Some representative placeholder content for the first slide.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/homepage/carousel/carousel-2.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-block z-1">
+                                <h5>Second slide label</h5>
+                                <p>Some representative placeholder content for the second slide.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/homepage/carousel/carousel-3.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-block z-1">
+                                <h5>Third slide label</h5>
+                                <p>Some representative placeholder content for the third slide.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#gallery" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#gallery" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+        <!-- Section Gallery End-->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
