--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="img/homepage/carousel/carousel-2.jpg" class="d-block w-100" alt="...">
+                            <img src="img/homepage/carousel/carousel-2.JPG" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-block z-1">
                                 <h5>Second slide label</h5>
                                 <p>Some representative placeholder content for the second slide.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="img/homepage/carousel/carousel-3.jpg" class="d-block w-100" alt="...">
+                            <img src="img/homepage/carousel/carousel-3.JPG" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-block z-1">
                                 <h5>Third slide label</h5>
                                 <p>Some representative placeholder content for the third slide.</p>
