--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
     <body>
         <!-- Navbar Start -->
-        <nav class="navbar fixed-top navbar-expand-lg bg-primary-subtle">
+        <nav class="navbar fixed-top navbar-expand-lg bg-secondary">
             <div class="container">
-                <a class="navbar-brand fw-bold" href="#">AKSANA 29</a>
+                <a class="navbar-brand fw-bold" href="/">AKSANA 29</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -36,24 +36,24 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto fw-medium">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Guru</a>
+                            <a class="nav-link" href="guru.html">Guru</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
+                            <a class="nav-link dropdown-toggle" href="" data-bs-toggle="dropdown"
                                 aria-expanded="false">Kelas</a>
                             <ul class="dropdown-menu dropdown-menu">
-                                <li><a class="dropdown-item" href="#">XII IPA 1</a></li>
-                                <li><a class="dropdown-item" href="#">XII IPA 2</a></li>
-                                <li><a class="dropdown-item" href="#">XII IPA 3</a></li>
-                                <li><a class="dropdown-item" href="#">XII IPA 4</a></li>
-                                <li><a class="dropdown-item" href="#">XII IPS 1</a></li>
-                                <li><a class="dropdown-item" href="#">XII IPS 2</a></li>
-                                <li><a class="dropdown-item" href="#">XII IPS 3</a></li>
-                                <li><a class="dropdown-item" href="#">XII PAI</a></li>
+                                <li><a class="dropdown-item" href="pesdik/dua-belas-ipa-1.html">XII IPA 1</a></li>
+                                <li><a class="dropdown-item" href="pesdik/dua-belas-ipa-2.html">XII IPA 2</a></li>
+                                <li><a class="dropdown-item" href="pesdik/dua-belas-ipa-3.html">XII IPA 3</a></li>
+                                <li><a class="dropdown-item" href="pesdik/dua-belas-ipa-4.html">XII IPA 4</a></li>
+                                <li><a class="dropdown-item" href="pesdik/dua-belas-ips-1.html">XII IPS 1</a></li>
+                                <li><a class="dropdown-item" href="pesdik/dua-belas-ips-2.html">XII IPS 2</a></li>
+                                <li><a class="dropdown-item" href="pesdik/dua-belas-ips-3.html">XII IPS 3</a></li>
+                                <li><a class="dropdown-item" href="pesdik/dua-belas-pai.html">XII PAI</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Galeri</a>
+                            <a class="nav-link" href="galeri.html">Galeri</a>
                         </li>
                     </ul>
                 </div>
@@ -88,10 +88,16 @@
                         <div class="card">
                             <img src="img/homepage/about/card-1.jpg" class="card-img-top" alt="foto angkatan 29">
                             <div class="card-body">
-                                <h5 class="card-title text-center">AKSANA 29</h5>
-                                <p class="card-text text-justify">Lorem ipsum dolor, sit amet consectetur adipisicing
-                                    elit. Quod
-                                    corporis autem consequatur sint quibusdam assumenda excepturi modi alias at amet!
+                                <h5 class="card-title text-center fw-bold">Buku Angkatan</h5>
+                                <p class="card-text text-justify">
+                                    Website Aksana 29 merupakan website yang dijadikan
+                                    tempat bagaimana Angkatan 29 MAN
+                                    Kapuas bercerita, bernostalgia, dan bertukar informasi satu sama lain nya dalam
+                                    rangka mempererat tali ukhuwah silaturahmi antar sesama alumni MAN Kapuas tahun
+                                    ajaran 2023/2024.
+                                    <br>
+                                    Website ini juga menjadi bukti kemajuan tekonlogi yang menggantikan buku angkatan
+                                    (fisik) yang sekarang bisa diakses dengan mudahnya secara digital (online)
                                 </p>
                             </div>
                         </div>
@@ -101,10 +107,6 @@
                             <img src="img/homepage/about/card-1.jpg" class="card-img-top" alt="foto angkatan 29">
                             <div class="card-body">
                                 <h5 class="card-title text-center">AKSANA 29</h5>
-                                <p class="card-text text-justify">Lorem ipsum dolor, sit amet consectetur adipisicing
-                                    elit. Quod
-                                    corporis autem consequatur sint quibusdam assumenda excepturi modi alias at amet!
-                                </p>
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item list-group-item-action">Ketua Angkatan : <b>Akhmad Rezky
                                             Utama</b></li>
@@ -132,6 +134,7 @@
                                     </li>
                                     <li class="list-group-item list-group-item-action">
                                         <div class="fw-bold">Jumlah Peserta Didik :</div>
+                                        <div>Semua : <b>279 Orang</b></div>
                                         <div>Laki-Laki : <b>115 Orang</b></div>
                                         <div>Perempuan : <b>164 Orang</b></div>
                                     </li>
@@ -139,26 +142,27 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-6 mb-3">
-                        <div class="card">
-                            <img src="img/homepage/about/card-1.jpg" class="card-img-top" alt="foto angkatan 29">
-                            <div class="card-body">
-                                <h5 class="card-title text-center">AKSANA 29</h5>
-                                <p class="card-text text-justify">Lorem ipsum dolor, sit amet consectetur adipisicing
-                                    elit. Quod
-                                    corporis autem consequatur sint quibusdam assumenda excepturi modi alias at amet!
-                                </p>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#CFE2FF" fill-opacity="1"
+                    d="M0,128L80,112C160,96,320,64,480,53.3C640,43,800,53,960,53.3C1120,53,1280,43,1360,37.3L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
+                </path>
+            </svg>
         </section>
         <!-- About Section End-->
 
         <!-- Section Gallery Start-->
-        <section class="gallery">
-            <div class="container-fluid">
+        <section class="gallery bg-primary-subtle">
+            <div class="container">
+                <div class="row justify-content-center text-center">
+                    <div class="col-6">
+                        <h1>Sudut Sekolah</h1>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid p-0">
                 <div id="gallery" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#gallery" data-bs-slide-to="0" class="active"
@@ -171,21 +175,21 @@
                     <div class="carousel-inner position-relative">
                         <div class="carousel-item active">
                             <img src="img/homepage/carousel/carousel-1.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-block z-1">
+                            <div class="carousel-caption d-none d-md-block z-1">
                                 <h5>First slide label</h5>
                                 <p>Some representative placeholder content for the first slide.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="img/homepage/carousel/carousel-2.JPG" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-block z-1">
+                            <div class="carousel-caption d-none d-md-block z-1">
                                 <h5>Second slide label</h5>
                                 <p>Some representative placeholder content for the second slide.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="img/homepage/carousel/carousel-3.JPG" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-block z-1">
+                            <div class="carousel-caption d-none d-md-block z-1">
                                 <h5>Third slide label</h5>
                                 <p>Some representative placeholder content for the third slide.</p>
                             </div>
@@ -201,12 +205,50 @@
                     </button>
                 </div>
             </div>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#212529" fill-opacity="1"
+                    d="M0,288L80,261.3C160,235,320,181,480,170.7C640,160,800,192,960,186.7C1120,181,1280,139,1360,117.3L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
+                </path>
+            </svg>
         </section>
         <!-- Section Gallery End-->
+
+        <!-- Footer Start -->
+        <footer>
+            <div class="container-fluid bg-dark text-white p-5">
+                <div class="row">
+                    <div class="col col-sm-6">
+                        <h3>BUKU TAHUNAN ANGKATAN 29 (AKSANA 29) MAN KAPUAS TAHUN 2024</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae debitis, aspernatur veniam
+                            quas accusantium at libero ipsum deserunt praesentium facilis modi, enim nemo vitae quia
+                            illo vel nulla consectetur dignissimos eum explicabo totam? Porro eaque explicabo deleniti
+                            similique reprehenderit dolorem, tempora eos molestias itaque voluptate libero repellat
+                            cupiditate voluptatibus, earum voluptatum perspiciatis at quos. Obcaecati necessitatibus
+                            eveniet fuga error harum incidunt temporibus corporis quos non aliquid, dolorem ducimus
+                            officia, blanditiis fugit ipsam, doloremque ut deleniti suscipit molestias? Amet velit eaque
+                            minus quam maiores in sequi perferendis! Tempora cupiditate, vel repellendus perferendis
+                            blanditiis ipsam officia ab iusto ut nihil facilis! Ratione?</p>
+                    </div>
+                    <div class="col col-sm-6">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur dolores culpa quisquam
+                            aut, necessitatibus neque vel? Voluptates distinctio voluptatem adipisci dolorum suscipit
+                            nisi, laborum, sint iste, exercitationem eius ducimus quia optio minus eum animi maxime
+                            nihil? Assumenda maiores quasi facilis earum unde autem harum vero magni sapiente recusandae
+                            velit pariatur, odit dignissimos quae eveniet molestias ea aliquam aut veritatis sed
+                            mollitia at? Nisi, numquam praesentium minima vel repellat eos pariatur soluta maxime, hic
+                            saepe illo odio dolorem cum, autem eius quos. Animi rerum rem quas quae dolor nihil unde
+                            eos? Maiores laboriosam repellat harum, sed eos et aspernatur rerum quasi.</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- Footer End -->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
+
+        <script src="script/script.js"></script>
     </body>
 
 </html>
