--- a/guru.html
+++ b/guru.html
@@ -65,7 +65,7 @@
         <!-- Navbar End -->
 
         <!-- Section Card Start -->
-        <div class="container mt-5 py-5" id="hasil-pencarian">
+        <div class="container mt-5 py-5" id="non-pencarian">
             <div class="row justify-content-center text-center">
                 <div class="col-6">
                     <h1>Kepala Madrasah</h1>
@@ -193,6 +193,16 @@
                 </div>
             </div>
         </div>
+
+        <div class="container mt-5 py-5" id="pencarian">
+            <div class="row justify-content-center text-center">
+                <div class="col-6">
+                    <h1>Guru MAN Kapuas</h1>
+                    <hr>
+                </div>
+            </div>
+            <div class="row justify-content-center" id="hasil-pencarian"></div>
+        </div>
         <!-- Section Card End -->
 
         <!-- Modal Start -->
@@ -206,7 +216,7 @@
                     <div class="modal-body">
                         <div class="row">
                             <div class="col-12 col-md-5">
-                                <img src="img/default.jpg" alt="Detail Guru" class="img-thumbnail"
+                                <img src="img/default.jpg" alt="Detail Guru" class="img-thumbnail img-fluid"
                                     id="detail-foto-guru">
                             </div>
                             <div class="col-12 col-md-7">
