--- a/guru.html
+++ b/guru.html
@@ -5,6 +5,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <link rel="icon" type="image/x-icon" href="img/favicon.png">
+
         <!-- Title -->
         <title>BUKU TAHUNAN AKSANA 29 MAN KAPUAS TAHUN 2024</title>
 
