--- a/pesdik/dua-belas-ipa-2.html
+++ b/pesdik/dua-belas-ipa-2.html
@@ -5,6 +5,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <link rel="icon" type="image/x-icon" href="../img/favicon.png">
+
+
         <!-- Title -->
         <title data-kelas="XII IPA 2">BUKU TAHUNAN AKSANA 29 MAN KAPUAS TAHUN 2024</title>
 
