--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <!-- About Section End-->
 
         <!-- Section Gallery Start-->
-        <section class="gallery bg-secondary">
+        <section class="gallery bg-secondary" id="gallery">
             <div class="container-fluid">
                 <div class="row justify-content-center text-center text-white">
                     <div class="col-6">
@@ -156,55 +156,7 @@
                         <hr>
                     </div>
                 </div>
-                <!-- <div id="gallery" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#gallery" data-bs-slide-to="0" class="active"
-                            aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#gallery" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#gallery" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
-                    </div>
-                    <div class="carousel-inner position-relative">
-                        <div class="carousel-item active">
-                            <img src="img/homepage/carousel/carousel-1.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block z-1">
-                                <h5>First slide label</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="img/homepage/carousel/carousel-2.JPG" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block z-1">
-                                <h5>Second slide label</h5>
-                                <p>Some representative placeholder content for the second slide.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="img/homepage/carousel/carousel-3.JPG" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block z-1">
-                                <h5>Third slide label</h5>
-                                <p>Some representative placeholder content for the third slide.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#gallery" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#gallery" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div> -->
-                <div class="row" id="gallery-card">
-                    <!-- <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                        <div class="card">
-                            <img src="img/homepage/gallery/lapangan futsal.JPG" class="img-thumbnail rounded" alt="..."
-                                data-bs-toggle="modal" data-bs-target="#gallery"
-                                data-title="Lapangan Futsal / Lapangan Utama">
-                        </div>
-                    </div> -->
+                <div class="row justify-content-center" id="gallery-card">
                 </div>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -216,11 +168,11 @@
         <!-- Section Gallery End-->
 
         <!-- Modal Start -->
-        <div class="modal fade" id="gallery" tabindex="-1" aria-labelledby="galleryLabel" aria-hidden="true">
+        <div class="modal fade" id="galleryModal" tabindex="-1" aria-labelledby="galleryModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="galleryLabel"></h1>
+                        <h1 class="modal-title fs-5" id="galleryModalLabel"></h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
