--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <body>
         <!-- Navbar Start -->
-        <nav class="navbar fixed-top navbar-expand-lg" data-bs-theme="dark">
+        <nav class="navbar fixed-top navbar-expand-lg bg-secondary" data-bs-theme="dark">
             <div class="container">
                 <a class="navbar-brand fw-bold" href="/">AKSANA 29</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -54,9 +54,9 @@
                                 <li><a class="dropdown-item" href="pesdik/dua-belas-pai.html">XII PAI</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="galeri.html">Galeri</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -64,9 +64,9 @@
         <!-- Navbar End -->
 
         <!-- Hero Section Start -->
-        <section class="hero-section">
-            <div class="container-fluid position-relative p-0 row align-items-center w-100">
-                <div class="fw-bold position-absolute z-1 mt-4 mt-sm-0 hero-title text-center col-12">
+        <section class="hero-section mt-5 mt-lg-0">
+            <div class="container-fluid position-relative p-0 row align-items-center w-100 justify-content-center">
+                <div class="fw-bold position-absolute z-1 mt-4 mt-sm-0 hero-title text-center col-11">
                     <div class="fw-bold" id="title-1">AKSANA 29</div>
                     <div class="fw-bold mb-5" id="title-2">MAN KAPUAS ANGKATAN KE-29</div>
                 </div>
