--- a/pesdik/dua-belas-pai.html
+++ b/pesdik/dua-belas-pai.html
@@ -54,9 +54,9 @@
                                 <li><a class="dropdown-item" href="dua-belas-pai.html">XII PAI</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="galeri.html">Galeri</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item ms-lg-3">
                             <input type="search" class="form-control" id="search" placeholder="Cari peserta didik"
                                 autofocus>
