--- a/guru.html
+++ b/guru.html
@@ -240,27 +240,33 @@
         <footer>
             <div class="container-fluid bg-dark text-white p-5">
                 <div class="row">
-                    <div class="col col-sm-6">
+                    <div class="col-12 col-sm-6 text-justify">
                         <h3>BUKU TAHUNAN ANGKATAN 29 (AKSANA 29) MAN KAPUAS TAHUN 2024</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae debitis, aspernatur veniam
-                            quas accusantium at libero ipsum deserunt praesentium facilis modi, enim nemo vitae quia
-                            illo vel nulla consectetur dignissimos eum explicabo totam? Porro eaque explicabo deleniti
-                            similique reprehenderit dolorem, tempora eos molestias itaque voluptate libero repellat
-                            cupiditate voluptatibus, earum voluptatum perspiciatis at quos. Obcaecati necessitatibus
-                            eveniet fuga error harum incidunt temporibus corporis quos non aliquid, dolorem ducimus
-                            officia, blanditiis fugit ipsam, doloremque ut deleniti suscipit molestias? Amet velit eaque
-                            minus quam maiores in sequi perferendis! Tempora cupiditate, vel repellendus perferendis
-                            blanditiis ipsam officia ab iusto ut nihil facilis! Ratione?</p>
+                        <p>Website Buku Tahunan Aksana 29 merupakan website yang dijadikan
+                            tempat bagaimana Angkatan 29 MAN
+                            Kapuas bercerita, bernostalgia, dan bertukar informasi satu sama lain nya dalam
+                            rangka mempererat tali ukhuwah silaturahmi antar sesama alumni MAN Kapuas tahun
+                            ajaran 2023/2024.
+                            <br>
+                            Website ini juga menjadi bukti kemajuan teknologi yang menggantikan buku angkatan
+                            (fisik) yang sekarang bisa diakses dengan mudahnya secara digital (online)
+                        </p>
                     </div>
-                    <div class="col col-sm-6">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur dolores culpa quisquam
-                            aut, necessitatibus neque vel? Voluptates distinctio voluptatem adipisci dolorum suscipit
-                            nisi, laborum, sint iste, exercitationem eius ducimus quia optio minus eum animi maxime
-                            nihil? Assumenda maiores quasi facilis earum unde autem harum vero magni sapiente recusandae
-                            velit pariatur, odit dignissimos quae eveniet molestias ea aliquam aut veritatis sed
-                            mollitia at? Nisi, numquam praesentium minima vel repellat eos pariatur soluta maxime, hic
-                            saepe illo odio dolorem cum, autem eius quos. Animi rerum rem quas quae dolor nihil unde
-                            eos? Maiores laboriosam repellat harum, sed eos et aspernatur rerum quasi.</p>
+                    <div class="col-12 col-sm-6">
+                        <p>
+                            Copyright © 2024
+                            <br>
+                            <br>
+                            <b>Dibuat oleh :</b>
+                            <br>
+                            Muhamad Kemal Faza (XII IPA 1)
+                            <br>
+                            <b>Partner :</b>
+                            <br>
+                            Muhamad Zulfikar (XII IPA 2)
+                            <br>
+                            Muhammad Hilmy 'Alfajar (XII IPA 2)
+                        </p>
                     </div>
                 </div>
             </div>
