--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
                                         <div>Sekretaris : <b>Intan Nurul Ain</b></div>
                                         <div>Bendahara : <b>Aisya Rahmah</b></div>
                                     </li>
-                                    <li class="list-group-item list-group-item-action">
+                                    <!-- <li class="list-group-item list-group-item-action">
                                         <div class="fw-bold">Ketua Ekskul</div>
                                         <div>Drum Band : <b>Nur Rahman Diva Yanda</b></div>
                                         <div>LKBB : <b>Akhmad Rezky Utama</b></div>
                                         <div>PIK-R : <b>kmakamkm</b></div>
                                         <div>PMR : <b>Nafiis Hidayatullah</b></div>
                                         <div>Pramuka : <b>akkmskmakms</b></div>
-                                    </li>
+                                    </li> -->
                                     <li class="list-group-item list-group-item-action">
                                         <div class="fw-bold">Jumlah Peserta Didik :</div>
                                         <div>Semua : <b>279 Orang</b></div>
