--- a/pesdik/dua-belas-ipa-1.html
+++ b/pesdik/dua-belas-ipa-1.html
@@ -71,16 +71,16 @@
         <!-- Section Card Start -->
         <div class="container mt-5 py-5">
             <div class="row justify-content-center text-center">
-                <div class="col-6">
-                    <h1 id="title-walkel">Wali Kelas</h1>
+                <div class="col-12 col-sm-10 col-md-8 col-lg-6">
+                    <h1 id="title-walkel"></h1>
                     <hr>
                 </div>
             </div>
             <div class="row justify-content-center" id="wali-kelas">
             </div>
             <div class="row justify-content-center text-center">
-                <div class="col-6">
-                    <h1 id="title-pesdik">Kelas</h1>
+                <div class="col-12 col-sm-10 col-md-8 col-lg-6">
+                    <h1 id="title-pesdik"></h1>
                     <hr>
                 </div>
             </div>
