--- a/pesdik/dua-belas-ipa-3.html
+++ b/pesdik/dua-belas-ipa-3.html
@@ -71,7 +71,7 @@
         <!-- Section Card Start -->
         <div class="container mt-5 py-5">
             <div class="row justify-content-center text-center">
-                <div class="col-6">
+                <div class="col-12 col-sm-10 col-md-8 col-lg-6">
                     <h1 id="title-walkel">Wali Kelas</h1>
                     <hr>
                 </div>
@@ -79,7 +79,7 @@
             <div class="row justify-content-center" id="wali-kelas">
             </div>
             <div class="row justify-content-center text-center">
-                <div class="col-6">
+                <div class="col-12 col-sm-10 col-md-8 col-lg-6">
                     <h1 id="title-pesdik">Kelas</h1>
                     <hr>
                 </div>
