--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row justify-content-center">
                     <div class="col-12 col-lg-6 mb-3">
                         <div class="card">
                             <img src="img/homepage/about/web.png" class="card-img-top" alt="foto angkatan 29">
@@ -134,6 +134,18 @@
                                         <div>Perempuan : <b>164 Orang</b></div>
                                     </li>
                                 </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6 mb-3">
+                        <div class="card">
+                            <img src="img/homepage/about/web.png" class="card-img-top" alt="foto angkatan 29">
+                            <div class="card-body">
+                                <h5 class="card-title text-center fw-bold">Siapa yang akan Berulang Tahun Bulan Ini?
+                                </h5>
+                                <p class="card-text text-justify">
+                                <ul class="list-group list-group-flush" id="ulang-tahun"></ul>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -224,9 +236,13 @@
         </footer>
         <!-- Footer End -->
 
+        <!-- Boostsrap Javascript -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
+
+        <!-- Sweetalert -->
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
         <script src="script/script.js"></script>
     </body>
