--- a/pesdik/dua-belas-ipa-1.html
+++ b/pesdik/dua-belas-ipa-1.html
@@ -29,7 +29,7 @@
 
     <body>
         <!-- Navbar Start -->
-        <nav class="navbar fixed-top navbar-expand-lg bg-light">
+        <nav class="navbar fixed-top navbar-expand-lg bg-secondary" data-bs-theme="dark">
             <div class=" container">
                 <a class="navbar-brand fw-bold" href="/">AKSANA 29</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -42,10 +42,10 @@
                             <a class="nav-link" href="../guru.html">Guru</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="" data-bs-toggle="dropdown"
+                            <a class="nav-link dropdown-toggle active" href="" data-bs-toggle="dropdown"
                                 aria-expanded="false">Kelas</a>
                             <ul class="dropdown-menu dropdown-menu">
-                                <li><a class="dropdown-item" href="dua-belas-ipa-1.html">XII IPA 1</a></li>
+                                <li><a class="dropdown-item active" href="dua-belas-ipa-1.html">XII IPA 1</a></li>
                                 <li><a class="dropdown-item" href="dua-belas-ipa-2.html">XII IPA 2</a></li>
                                 <li><a class="dropdown-item" href="dua-belas-ipa-3.html">XII IPA 3</a></li>
                                 <li><a class="dropdown-item" href="dua-belas-ipa-4.html">XII IPA 4</a></li>
@@ -55,10 +55,10 @@
                                 <li><a class="dropdown-item" href="dua-belas-pai.html">XII PAI</a></li>
                             </ul>
                         </li>
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="galeri.html">Galeri</a>
-                        </li> -->
-                        <li class="nav-item ms-lg-3">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../galery.html">Galeri</a>
+                        </li>
+                        <li class="nav-item ms-lg-3" data-bs-theme="light">
                             <input type="search" class="form-control" id="search" placeholder="Cari peserta didik"
                                 autofocus>
                         </li>
