--- a/galery.html
+++ b/galery.html
@@ -10,10 +10,6 @@
         <!-- Title -->
         <title>BUKU TAHUNAN AKSANA 29 MAN KAPUAS TAHUN 2024</title>
 
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
         <!-- Font Google -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,6 +18,10 @@
             rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
         <!-- My CSS -->
         <link rel="stylesheet" href="style/style.css">
     </head>
@@ -29,7 +29,7 @@
     <body>
         <!-- Navbar Start -->
         <nav class="navbar fixed-top navbar-expand-lg bg-secondary" data-bs-theme="dark">
-            <div class=" container">
+            <div class="container">
                 <a class="navbar-brand fw-bold" href="/">AKSANA 29</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +38,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto fw-medium">
                         <li class="nav-item">
-                            <a class="nav-link active" href="guru.html">Guru</a>
+                            <a class="nav-link" href="guru.html">Guru</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="" data-bs-toggle="dropdown"
@@ -55,10 +55,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="galery.html">Galeri</a>
-                        </li>
-                        <li class="nav-item ms-lg-3" data-bs-theme="light">
-                            <input type="search" class="form-control" id="search" placeholder="Cari guru" autofocus>
+                            <a class="nav-link active" href="galery.html">Galeri</a>
                         </li>
                     </ul>
                 </div>
@@ -66,109 +63,41 @@
         </nav>
         <!-- Navbar End -->
 
-        <!-- Section Card Start -->
-        <div class="container mt-5 py-5" id="non-pencarian">
-            <div class="row justify-content-center text-center">
-                <div class="col-6">
-                    <h1>Kepala Madrasah</h1>
-                    <hr>
-                </div>
-            </div>
-            <div class="row justify-content-center" id="kepala-madrasah">
-            </div>
-            <div class="row justify-content-center text-center">
-                <div class="col-6">
-                    <h1>Kepala Tata Usaha</h1>
-                    <hr>
-                </div>
-            </div>
-            <div class="row justify-content-center" id="kepala-tata-usaha">
-            </div>
-            <div class="row justify-content-center text-center">
-                <div class="col-6">
-                    <h1>Wakil Kepala Madrasah</h1>
-                    <hr>
-                </div>
-            </div>
-            <div class="row justify-content-center" id="wakil-kepala-madrasah">
-            </div>
-            <div class="row justify-content-center text-center">
-                <div class="col-6">
-                    <h1>Staff Tata Usaha</h1>
-                    <hr>
-                </div>
-            </div>
-            <div class="row justify-content-center" id="staff-tata-usaha">
-            </div>
-            <div class="row justify-content-center text-center">
-                <div class="col-6">
-                    <h1>Wali Kelas</h1>
-                    <hr>
-                </div>
-            </div>
-            <div class="row justify-content-center" id="wali-kelas">
-            </div>
-            <div class="row justify-content-center text-center">
-                <div class="col-6">
-                    <h1>Dewan Guru</h1>
-                    <hr>
-                </div>
-            </div>
-            <div class="row justify-content-center" id="dewan-guru">
-            </div>
-            <div class="row justify-content-center text-center">
-                <div class="col-6">
-                    <h1>Kebersihan dan Keamanan</h1>
-                    <hr>
-                </div>
-            </div>
-            <div class="row justify-content-center" id="kebersihan-dan-keamanan">
-            </div>
-        </div>
-
-        <div class="container mt-5 py-5" id="pencarian">
-            <div class="row justify-content-center text-center">
-                <div class="col-6">
-                    <h1>Guru MAN Kapuas</h1>
-                    <hr>
-                </div>
-            </div>
-            <div class="row justify-content-center" id="hasil-pencarian"></div>
-        </div>
-        <!-- Section Card End -->
-
-        <!-- Modal Start -->
-        <div class="modal fade" id="detail" tabindex="-1" aria-labelledby="detailLabel" aria-hidden="true">
-            <div class="modal-dialog modal-lg modal-fullscreen-lg-down">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="detailLabel">Detail Guru</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="row">
-                            <div class="col-12 col-md-5">
-                                <img src="img/default.jpg" alt="Detail Guru" class="img-thumbnail img-fluid"
-                                    id="detail-foto-guru">
-                            </div>
-                            <div class="col-12 col-md-7">
-                                <ul class="list-group list-group-flush" id="detail-guru">
-                                </ul>
-                            </div>
+        <!-- Section Gallery Start-->
+        <section class="gallery">
+            <div class="container mt-5 py-5">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="alert alert-secondary text-center" role=" alert">
+                            <h4 class="alert-heading">Google Drive Angkatan</h4>
+                            <p>Ini berisi dokumentasi saat pembuatan video angkatan serta dokumentasi saat acara
+                                perpisahan, baik di photobooth maupun saat acara berlangsung</p>
+                            <hr>
+                            <a href="https://drive.google.com/drive/folders/1Wbep_45p73UK7hunoR8VYTO9vjOCJmiP?usp=drive_link"
+                                class="btn btn-secondary" target="_blank">Drive Angkatan
+                            </a>
                         </div>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+                <div class="row justify-content-center text-center">
+                    <div class="col-12 col-sm-10 col-md-8 col-lg-6">
+                        <h1>Video Angkatan</h1>
+                        <hr>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <iframe src="https://drive.google.com/file/d/1vJTo8jujciCuFsyKsdmBY2WqlSPpHK9i/preview"
+                            allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Modal End -->
+        </section>
+        <!-- Section Gallery End -->
 
         <!-- Footer Start -->
         <footer>
-            <div class="container-fluid bg-dark text-white p-5">
+            <div class=" container-fluid bg-dark text-white p-5">
                 <div class="row">
                     <div class="col-12 col-sm-6 text-justify">
                         <h3>WEBSITE BUKU TAHUNAN ANGKATAN 29 (AKSANA 29) MAN KAPUAS TAHUN 2024</h3>
@@ -178,7 +107,8 @@
                             rangka mempererat tali ukhuwah silaturahmi antar sesama alumni MAN Kapuas tahun
                             ajaran 2023/2024.
                             <br>
-                            Website ini juga menjadi bukti kemajuan teknologi yang menggantikan buku angkatan
+                            Website ini juga menjadi bukti kemajuan teknologi yang menggantikan buku
+                            angkatan
                             (fisik) yang sekarang bisa diakses dengan mudahnya secara digital (online)
                         </p>
                     </div>
@@ -203,11 +133,13 @@
         </footer>
         <!-- Footer End -->
 
+        <!-- Boostsrap Javascript -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
-        <!-- <script src="script/script.js"></script> -->
-        <script src="script/guru.js"></script>
+
+        <!-- Sweetalert -->
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     </body>
 
