--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                                 <li><a class="dropdown-item" href="pesdik/dua-belas-pai.html">XII PAI</a></li>
                             </ul>
                         </li>
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="galeri.html">Galeri</a>
-                        </li> -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="galery.html">Galeri</a>
+                        </li>
                     </ul>
                 </div>
             </div>
