--- a/galery.html
+++ b/galery.html
@@ -88,7 +88,7 @@
                 <div class="row">
                     <div class="col-12">
                         <iframe src="https://drive.google.com/file/d/1vJTo8jujciCuFsyKsdmBY2WqlSPpHK9i/preview"
-                            allowfullscreen></iframe>
+                            allowfullscreen style="width: inherit; height: 50vh;"></iframe>
                     </div>
                 </div>
             </div>
