--- a/index.html
+++ b/index.html
@@ -137,6 +137,46 @@
                             </div>
                         </div>
                     </div>
+                    <!-- <div class="col-12 col-lg-6 mb-3">
+                        <div class="card">
+                            <img src="img/homepage/sambutan/Guru Parhani.JPG" class="card-img-top"
+                                alt="foto angkatan 29">
+                            <div class="card-body">
+                                <h5 class="card-title text-center fw-bold">Sambutan KH. Parhani
+                                </h5>
+                                <p class="card-text text-justify">
+                                    Assalamualaikum warahmatullahi wabarakatuh.
+                                    <br>
+                                    Anak anak ku siswa sekalian, Siswa Siswi MAN Kapuas yang pada tadi pagi melaksanakan
+                                    acara perpisahan sebagai siswa angkatan ke -29, tahun pelajaran 2023 -2024
+                                    <br>
+                                    <br>
+                                    Bapak mengucapkan selamat atas perjuangan kalian, mudah -mudahan Allah memberikan
+                                    hal yang terbaik kepada kalian semua. Pesan dari Bapak, jangan bosan untuk mencari
+                                    ilmu pengetahuan. Berjuanglah kalian, gunakan waktu sebaik -baiknya untuk mencari
+                                    ilmu sebaik -baiknya.
+                                    <br>
+                                    <br>
+                                    Karena ilmu adalah modal utama untuk meraih kesuksessan baik kesuksessan dunia atau
+                                    kesuksessan akhirat. Berbaktilah kepada orang tua dan beribadahlah kepada Allah.
+                                    Amalkan ilmu dalam kehidupan sebaik -baiknya agar kalian menjadi orang orang yang
+                                    baik dan orang orang yang solih solihah.
+                                    <br>
+                                    <br>
+                                    Mudahan semua mendapat barakah dari Allah Subahanahu Wa Ta 'ala. Demikian pesan dari
+                                    Bapak
+                                    <br>
+                                    <br>
+                                    Assalamu 'alaikum warahmatullahi wabarakatuh.
+                                    <br>
+                                    <br>
+                                    Guru KH. Parhani
+                                    <br>
+                                    20 April 2024
+                                </p>
+                            </div>
+                        </div>
+                    </div> -->
                     <div class="col-12 col-lg-6 mb-3">
                         <div class="card">
                             <img src="img/homepage/about/web.png" class="card-img-top" alt="foto angkatan 29">
