--- a/galery.html
+++ b/galery.html
@@ -81,13 +81,25 @@
                 </div>
                 <div class="row justify-content-center text-center">
                     <div class="col-12 col-sm-10 col-md-8 col-lg-6">
-                        <h1>Video Angkatan</h1>
+                        <h1>Video Angkatan AKSANA 29</h1>
+                        <hr>
+                    </div>
+                </div>
+                <div class="row mb-5">
+                    <div class="col-12">
+                        <iframe src="https://drive.google.com/file/d/1vJTo8jujciCuFsyKsdmBY2WqlSPpHK9i/preview"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="row justify-content-center text-center">
+                    <div class="col-12 col-sm-10 col-md-8">
+                        <h1>After Movie Perpisahan AKSANA 29</h1>
                         <hr>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <iframe src="https://drive.google.com/file/d/1vJTo8jujciCuFsyKsdmBY2WqlSPpHK9i/preview"
+                        <iframe src="https://drive.google.com/file/d/1vScWn_hF_GCe3wlnEcuKA9eITuLMqkNX/preview"
                             allowfullscreen></iframe>
                     </div>
                 </div>
