--- a/galery.html
+++ b/galery.html
@@ -71,7 +71,8 @@
                         <div class="alert alert-secondary text-center" role=" alert">
                             <h4 class="alert-heading">Google Drive Angkatan</h4>
                             <p>Ini berisi dokumentasi saat pembuatan video angkatan serta dokumentasi saat acara
-                                perpisahan, baik di photobooth maupun saat acara berlangsung</p>
+                                perpisahan, baik di photobooth maupun saat acara berlangsung. Silahkan klik tombol di
+                                bawah ini.</p>
                             <hr>
                             <a href="https://drive.google.com/drive/folders/1Wbep_45p73UK7hunoR8VYTO9vjOCJmiP?usp=drive_link"
                                 class="btn btn-secondary" target="_blank">Drive Angkatan
