--- a/index.html
+++ b/index.html
@@ -384,7 +384,8 @@
                                                 angkatan ke 29 tahun pelajaran 2023/2024
                                                 <br>
                                                 <br>
-                                                Alhamdulillah, kami bukan selamat atas keberhasilannya selama belajar di
+                                                Alhamdulillah, kami ucapkan selamat atas keberhasilannya selama belajar
+                                                di
                                                 man kapuas yang berperstasi, mari sama sama lebih kita tingkatkan
                                                 prestasinya kalian dan yang belum, ayo kita sama sama kejar prestasi
                                                 kalian.
