--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
             </div>
             <div class="row justify-content-center text-center my-3">
                 <div class="col-11 col-sm-10 col-md-8 col-sm-6">
-                    <h1 data-aos="fade-up" data-aos-duration="1000">Sambutan-sambutan</h1>
+                    <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">Sambutan-sambutan</h1>
                     <hr>
                 </div>
             </div>
-            <div class="swiper sambutan-container" data-aos="fade-up" data-aos-duration="1000">
+            <div class="swiper sambutan-container" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
                 <div class="swiper-pagination sambutan-pagination"></div>
                 <div class="swiper-button-prev sambutan-button-prev"></div>
                 <div class="swiper-button-next sambutan-button-next"></div>
@@ -431,11 +431,11 @@
             <div class="container-fluid">
                 <div class="row justify-content-center text-center text-white">
                     <div class="col-6">
-                        <h1 data-aos="fade-up" data-aos-duration="1000">Sudut Sekolah</h1>
+                        <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1500">Sudut Sekolah</h1>
                         <hr>
                     </div>
                 </div>
-                <div class="swiper gallery-container">
+                <div class="swiper gallery-container" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1500">
                     <div class="swiper-button-prev gallery-button-prev"></div>
                     <div class="swiper-button-next gallery-button-next"></div>
                     <div class="swiper-wrapper" id="gallery-card">
