--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         rangka mempererat tali ukhuwah silaturahmi antar sesama alumni MAN Kapuas tahun
         ajaran 2023/2024. Website ini juga menjadi bukti kemajuan tekonlogi yang menggantikan buku angkatan
         (fisik) yang sekarang bisa diakses dengan mudahnya secara digital (online)">
-        <meta name="keywords" content="aksana 29, aksana, man kapuas, man, kapuas, perpisahan, graduation, 2024">
+        <meta name="keywords"
+            content="aksana 29, aksana, man kapuas, man, kapuas, perpisahan, graduation, 2024 alumni man kapuas 2024, alumni aksana 29, alumni man kapuas tahun 2024">
         <meta name="author" content="Muhamad Kemal Faza">
 
         <link rel="icon" type="image/x-icon" href="img/favicon.png">
